--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "license": "ISC",
     "dependencies": {
         "@types/express": "^4.17.3",
+        "@types/jsonwebtoken": "^8.3.8",
+        "@types/lodash": "^4.14.149",
         "@types/mongoose": "^5.7.6",
         "@types/node": "^13.9.1",
         "@types/validator": "^12.0.1",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "json-server": "^0.16.1",
+        "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.15",
         "mongoose": "^5.9.5",
         "socket.io": "^2.3.0",
         "ts-node": "^8.6.2",
