--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "author": "Ilya D.",
     "license": "ISC",
     "dependencies": {
+        "@types/bcrypt": "^3.0.0",
         "@types/express": "^4.17.3",
         "@types/jsonwebtoken": "^8.3.8",
         "@types/lodash": "^4.14.149",
         "@types/mongoose": "^5.7.6",
         "@types/node": "^13.9.1",
         "@types/validator": "^12.0.1",
+        "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-validator": "^6.4.0",
         "json-server": "^0.16.1",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
