--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "license": "ISC",
     "dependencies": {
         "@types/bcrypt": "^3.0.0",
+        "@types/cors": "^2.8.6",
         "@types/express": "^4.17.3",
         "@types/jsonwebtoken": "^8.3.8",
         "@types/lodash": "^4.14.149",
         "@types/mongoose": "^5.7.6",
         "@types/node": "^13.9.1",
+        "@types/socket.io": "^2.1.4",
         "@types/validator": "^12.0.1",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
